fix: intro icons spacing

--- a/src/styles/layout/_intro.scss
+++ b/src/styles/layout/_intro.scss
@@ -16,6 +16,7 @@
       width: var(--text-base);
       height: var(--text-base);
       border-radius: var(--radius-sm);
+      margin-right: 4px;
       vertical-align: middle;
       position: relative;
       top: -1px;
